[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/Lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer2" type="PanelContainer" parent="."]
margin_left = 30.0
margin_top = 115.0
margin_right = 1040.0
margin_bottom = 711.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 589.0

[node name="level" type="OptionButton" parent="PanelContainer2/Panel"]
margin_left = 316.362
margin_top = 80.8523
margin_right = 559.362
margin_bottom = 129.852
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer2/Panel/level"]
margin_left = -244.379
margin_top = -8.96414
margin_right = -95.3792
margin_bottom = 38.0359
custom_fonts/font = SubResource( 2 )
text = "Level"

[node name="Label" type="Label" parent="."]
margin_left = 34.0
margin_top = 55.0
margin_right = 385.0
margin_bottom = 82.0
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = ExtResource( 2 )

[node name="start" type="Button" parent="."]
margin_left = 1117.98
margin_top = 422.061
margin_right = 1249.98
margin_bottom = 458.061
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="PanelContainer2/Panel/level" to="." method="_on_level_item_selected"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
